# openisl

./: .gitignore  CMakeLists.txt  COPYRIGHT  LICENSE  README.md  env.bat  openisl.code-workspace  run_cmake.bat  run_cmake_x64.sh
code/: CMakeLists.txt  envvars.props
code/api/isl_api/: CMakeLists.txt
code/api/isl_api/include/: CMakeLists.txt  appsettings.h  isl_api.h  isl_api_c.h  isl_api_global.h  isl_connect.h  isl_const.h  isl_data.h  isl_errorcodes.h  isl_exitthread.h  isl_instances.h  isl_settings.h  isl_shm_connect.h  isl_shm_data.h  isl_simulations.h  isl_utils.h  isl_variable.h  swversion.h
code/api/isl_api/project/: isl_api.sln  isl_api.vcxproj  isl_api.vcxproj.filters  postbuild.x64.bat  postbuild.x86.bat
code/api/isl_api/resources/: CMakeLists.txt  isl_api.ini  kill_ipcs.sh
code/api/isl_api/src/: CMakeLists.txt  appsettings.cpp  isl_api_c.cpp  isl_api_global.cpp  isl_connect.cpp  isl_data.cpp  isl_exitthread.cpp  isl_instances.cpp  isl_settings.cpp  isl_shm_connect.cpp  isl_shm_data.cpp  isl_simulations.cpp  isl_utils.cpp  isl_variable.cpp
code/api/isl_api_cli/: CMakeLists.txt
code/api/isl_api_cli/include/: CMakeLists.txt  isl_cli.h
code/api/isl_api_cli/project/: isl_cli.sln  isl_cli.vcxproj  isl_cli.vcxproj.filters  postbuild.x64.bat  postbuild.x86.bat
code/api/isl_api_cli/resources/: CMakeLists.txt
code/api/isl_api_cli/src/: AssemblyInfo.cpp  CMakeLists.txt  isl_cli.cpp
code/api/isl_api_java/: CMakeLists.txt
code/api/isl_api_java/include/: CMakeLists.txt  isl_java.h
code/api/isl_api_java/java/src/com/openisl/java/: CISLConnect.java  CISLData.java  CISLDoubleData.java  CISLIntData.java  CISLStringData.java
code/api/isl_api_java/project/: buildcheader.bat  buildjava.bat  isl_java.sln  isl_java.vcxproj  isl_java.vcxproj.filters  postbuild.x64.bat  postbuild.x86.bat
code/api/isl_api_java/src/: CMakeLists.txt  isl_java.cpp
code/api/isl_api_python/: CMakeLists.txt
code/api/isl_api_python/project/: 00_env.bat  01_install.bat  install.txt  isl_python.sln  isl_python.vcxproj  isl_python.vcxproj.filters  postbuild.x64.bat  postbuild.x86.bat
code/api/isl_api_python/resources/: 00_create_venv.bat  00_create_venv.sh  00_env.bat  00_env.sh  01_install.bat  01_install.sh  01_start.bat  01_start.sh  CMakeLists.txt  install.txt
code/api/isl_api_python/src/: 00_00_IMPORTANT.txt  00_00_README_FIRST.txt  00_clean_folder.bat  00_clean_folder.sh  00_create_venv.bat  00_env.bat  01_jupyterlab.bat  01_update_python.bat  01_update_venv.bat  02_build.bat  LICENSE.txt  README.rst  requirements.txt  setup.py
code/api/isl_api_python/src/openisl/: CISLConnect.py  CISLData.py  CISLLib.py  CISLSims.py  ISLConsts.py  ISLUtils.py  Singleton.py
code/connectors/: CMakeLists.txt
code/connectors/fmi/: CMakeLists.txt
code/connectors/fmi/master/: CMakeLists.txt
code/connectors/fmi/master/include/: CMakeLists.txt  appsettings.h  fmusim.h  fmusim_const.h  killerthread.h  model.h  modelvar.h  runthread.h  slave.h  slave_v2_0.h  swversion.h  utils.h
code/connectors/fmi/master/src/: CMakeLists.txt  appsettings.cpp  fmusim.cpp  killerthread.cpp  main.cpp  model.cpp  modelvar.cpp  runthread.cpp  slave.cpp  slave_v2_0.cpp  utils.cpp
code/connectors/fmi/slave/: CMakeLists.txt
code/connectors/fmi/slave/include/: CMakeLists.txt  islfmuslave.h  logcodes.h
code/connectors/fmi/slave/src/: CMakeLists.txt  fmi2Functions.cpp  islfmuslave.cpp
code/connectors/lua/: CMakeLists.txt
code/connectors/lua/include/: CMakeLists.txt  isl_lua.h  isl_lua_global.h  logcodes.h
code/connectors/lua/src/: CMakeLists.txt  isl_lua.cpp  isl_lua_global.cpp
code/connectors/matlab/: CMakeLists.txt
code/connectors/matlab/include/: CMakeLists.txt  isl_matlab.h  isl_matlab_global.h  logcodes.h
code/connectors/matlab/mex/: CMakeLists.txt  ISLDisconnect.cpp  ISLGetDouble.cpp  ISLGetDoubleEvt.cpp  ISLGetDoubleLast.cpp  ISLGetInteger.cpp  ISLInitialize.cpp  ISLSetDouble.cpp  ISLSetDoubleEvt.cpp  ISLSetInteger.cpp
code/connectors/matlab/src/: CMakeLists.txt  isl_matlab.cpp  isl_matlab_global.cpp
code/connectors/modelica/: CMakeLists.txt
code/connectors/modelica/include/: CMakeLists.txt  isl_modelica.h  isl_modelica_global.h  logcodes.h
code/connectors/modelica/src/: CMakeLists.txt  isl_modelica.cpp  isl_modelica_global.cpp
code/connectors/omnetpp/: CMakeLists.txt
code/connectors/omnetpp/include/: CMakeLists.txt  isl_omnetpp.h  isl_omnetpp_global.h  logcodes.h
code/connectors/omnetpp/src/: CMakeLists.txt  isl_omnetpp.cpp  isl_omnetpp_global.cpp
code/connectors/simulink/: CMakeLists.txt
code/connectors/simulink/include/: CMakeLists.txt  isl_simulink.h  isl_simulink_global.h  logcodes.h
code/connectors/simulink/mex/: CMakeLists.txt  isl_connector.cpp  isl_input.cpp  isl_output.cpp
code/connectors/simulink/src/: CMakeLists.txt  isl_simulink.cpp  isl_simulink_global.cpp
code/examples/tokens/main/: CMakeLists.txt  ReadMe.txt  run.bat  run_x64.bat  run_x64.sh  run_x86.bat  run_x86.sh
code/examples/tokens/process1/: CMakeLists.txt
code/examples/tokens/process1/include/: CMakeLists.txt
code/examples/tokens/process1/project/: postbuild.x86.bat  process1.sln  process1.vcxproj  process1.vcxproj.filters
code/examples/tokens/process1/src/: CMakeLists.txt  main.cpp
code/examples/tokens/process1/xml/: CMakeLists.txt  process1.xml
code/examples/tokens/process2/: CMakeLists.txt
code/examples/tokens/process2/include/: CMakeLists.txt  swversion.h
code/examples/tokens/process2/project/: postbuild.x64.bat  postbuild.x86.bat  process2.sln  process2.vcxproj  process2.vcxproj.filters
code/examples/tokens/process2/src/: CMakeLists.txt  main.cpp
code/examples/tokens/process2/xml/: CMakeLists.txt  process2.xml
code/examples/tokens/process3/: CMakeLists.txt
code/examples/tokens/process3/include/: CMakeLists.txt  swversion.h
code/examples/tokens/process3/project/: postbuild.x86.bat  process3.sln  process3.vcxproj  process3.vcxproj.filters
code/examples/tokens/process3/src/: CMakeLists.txt  main.cpp
code/examples/tokens/process3/xml/: CMakeLists.txt  process3.xml
(+23 files in other folders)
