if(${OPENISL_FMI})
    add_subdirectory("fmi")
endif()
if(${OPENISL_LUA})
    add_subdirectory("lua")
endif()
if(${OPENISL_MODELICA})
    add_subdirectory("modelica")
endif()
if(${OPENISL_OMNETPP})
    add_subdirectory("omnetpp")
endif()
if(${OPENISL_MATLAB})
    add_subdirectory("matlab")
endif()
if(${OPENISL_SIMULINK})
    add_subdirectory("simulink")
endif()
